@@ -4,7 +4,7 @@
 \title{News for \R Package \pkg{robustbase}}
 \encoding{UTF-8}
 
-\section{CHANGES in robustbase VERSION 0.92-8 (2017-10-14, svn r772)}{
+\section{CHANGES in robustbase VERSION 0.92-8 (2017-10-30, svn r774)}{
   \subsection{NEW FEATURES}{
     \itemize{
       \item \code{fullRank()} utility for \code{adjOutlyingness}:
@@ -18,7 +18,11 @@
       argument \code{complete = TRUE}, where only \emph{complete =
 	FALSE} is back compatible.
 
-      \item improved (error) messages in singular case in \code{.vcov.avar1()}.
+      \item improved (error) messages in singular case in
+      \code{.vcov.avar1()}.
+
+      \item \code{.psi.const()} is exported as well, and help is
+      improved about using and setting non-default psi tuning constants.
     }
   }
   \subsection{BUG FIXES}{
